--- a/Tinklapis/www.maistoukisjums.lt/about-us.html
+++ b/Tinklapis/www.maistoukisjums.lt/about-us.html
@@ -34,7 +34,7 @@
 
 
           <a href="index.html" >
-            <img src="sites/587371c38b0ad73f9f92ff50/theme/images/Logo.png" alt="Borsch" title="Borsch" />
+            <img src="sites/587371c38b0ad73f9f92ff50/theme/images/Logo.png" alt="maistoukis" title="maistoukis" />
           </a>
 
           <div id="logo_title">
