--- a/Tinklapis/www.maistoukisjums.lt/contacts.html
+++ b/Tinklapis/www.maistoukisjums.lt/contacts.html
@@ -27,11 +27,11 @@
 
 
           <a href="index.html" >
-            <img src="sites/587371c38b0ad73f9f92ff50/theme/images/Logo.png" alt="Borsch" title="Borsch" />
+            <img src="sites/587371c38b0ad73f9f92ff50/theme/images/Logo.png" alt="maistoukis" title="maistoukis" />
           </a>
 
           <div id="logo_title">
-  
+
           </div>
         </div>
         <div id="header_text_box">
