--- a/Tinklapis/www.maistoukisjums.lt/index.html
+++ b/Tinklapis/www.maistoukisjums.lt/index.html
@@ -15,14 +15,7 @@
     <link href="sites/587371c38b0ad73f9f92ff50/theme/stylesheets/application8a6e.css?1483975992" media="screen" rel="stylesheet" type="text/css" />
 
 
-              <script type="text/javascript">
-                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
-                ga('create', 'UA-47492581-1', 'auto');
-                ga('send', 'pageview');
-              </script>
+
 
   <link rel="stylesheet" type="text/css" href="assets/locomotive/wysihtml5_editor-b4f58f3877730b43505cbeda3a6e0ea4cd726201b999e2039660fdb751bcf6f3.css"></head>
   <body>
@@ -38,7 +31,7 @@
           </a>
 
           <div id="logo_title">
-    
+
           </div>
         </div>
         <div id="header_text_box">
@@ -86,23 +79,34 @@
 
 
 
-                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f93020c\files\uzkandis.jpg" alt="Uzkandis" >
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f93020c\files\rsz_uzkandis.jpg" alt="Uzkandis" >
 
 
 
 
-                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f93020f\files\uzkandis1.jpg" alt="Uzkandis1" >
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f93020f\files\rsz_uzkandis1.jpg" alt="Uzkandis1" >
 
 
 
 
-                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f930209\files\uzkandis3.jpg" alt="uzkandis3" >
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\5873762a8b0ad73f9f930209\files\rsz_uzkandis3.jpg" alt="uzkandis3" >
 
 
 
 
-                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\587376298b0ad73f9f9301fd\files\uzkandis5.jpg" alt="uzkandis5" >
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\Foto1\files\foto1.jpg" alt="foto1">
 
+
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\Foto2\files\foto2.jpg" alt"foto2">
+
+
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\Foto3\files\foto3.jpg" alt="foto3">
+
+
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\Foto4\files\foto4.jpg" alt="foto4">
+
+
+                    <img src="sites\587371c38b0ad73f9f92ff50\content_entry587376018b0ad73f9f92ff5f\Foto5\files'foto5.jpg" alt="foto5">
 
                 </div>
               </div>
