--- a/Tinklapis/www.maistoukisjums.lt/contacts.html
+++ b/Tinklapis/www.maistoukisjums.lt/contacts.html
@@ -179,20 +179,20 @@
 
                   <tr>
                     <td>
-                      I-V
+                      I-VII
                     </td>
                     <td>
-                      10.00 - 23.00
+                      7.30 - 21.00
                     </td>
                   </tr>
 
 
                   <tr>
                     <td>
-                      VI-VII
+
                     </td>
                     <td>
-                      11.00 - 23.00
+
                     </td>
                   </tr>
 
@@ -228,9 +228,7 @@
       </div>
     </div>
 
-    <script src="sites/587371c38b0ad73f9f92ff50/theme/javascripts/jquery.min8a6e.js?1483975992" type="text/javascript" ></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyAMm6FsJ9q6MDd1BMQKiqySaEqXwNVFEUA"></script>
-    <script src="sites/587371c38b0ad73f9f92ff50/theme/javascripts/scripts8a6e.js?1483975992" type="text/javascript" ></script>
+
   </body>
 
 </html>
