--- a/Tinklapis/www.maistoukisjums.lt/contacts.html
+++ b/Tinklapis/www.maistoukisjums.lt/contacts.html
@@ -54,10 +54,10 @@
         </div>
 
         <ul id="navigation">
-          <li id="about-us-link" class="link first"><a href="about-us.html"><span></span> Apie mus</a></li>
+<li id="main-link" class="link first"><a href="index.html"><span></span>Pagrindinis</a></li>
+<li id="about-us-link" class="link"><a href="about-us.html"><span></span> Apie mus</a></li>
 <li id="menu-link" class="link"><a href="menu.html"><span></span> Meniu</a></li>
 <li id="services-link" class="link"><a href="services.html"><span></span> Paslaugos</a></li>
-<li id="contacts-link" class="link on last"><a href="contacts.html"><span></span> Kontaktai</a></li>
         </ul>
       </div>
 
@@ -115,7 +115,7 @@
       </form>
     </div>
     <div class="contacts_tables">
-    
+
       <div id="contacts_info_title">
         kontaktai
       </div>
