update meniu.html Pataisytos klaidos.

--- a/Tinklapis/www.maistoukisjums.lt/menu.html
+++ b/Tinklapis/www.maistoukisjums.lt/menu.html
@@ -145,7 +145,7 @@
                      </tr>
 
                      <tr>
-                       <td>Cezario salotos (Pasirinktinai su Vištiena,lašiša,krevėtės)</td>
+                       <td>Cezario salotos (su vištiena, lašiša arba krevetėmis)</td>
 
 
 
@@ -210,7 +210,7 @@
                      </tr>
 
                      <tr>
-                       <td>Koldūnai su ivairiais priedais</td>
+                       <td>Koldūnai su įvairiais priedais</td>
 
 
 
@@ -222,7 +222,7 @@
                      </tr>
 
                      <tr>
-                       <td>Hamburgeris su kiauliena</td>
+                       <td>Mėsainis su kiauliena</td>
 
 
 
@@ -234,7 +234,7 @@
                      </tr>
 
                      <tr>
-                       <td>Hamburgeris su vištienos file</td>
+                       <td>Mėsainis su vištienos krūtinėle</td>
 
 
 
@@ -282,7 +282,7 @@
                      </tr>
 
                      <tr>
-                       <td>Įdaryta vištienos file</td>
+                       <td>Įdaryta vištienos krūtinėlė</td>
 
 
 
@@ -294,7 +294,7 @@
                      </tr>
 
                      <tr>
-                       <td>Kepta kongrijos file</td>
+                       <td>Kepta kongrijos krūtinėlė</td>
 
 
 
@@ -312,13 +312,13 @@
                  <table class="menu_group">
                    <tbody>
                      <tr>
-                       <td>Dienos pietus</td>
+                       <td>Dienos pietūs</td>
                        <td>
                        </td>
                      </tr>
 
                      <tr>
-                          <td>   Sriuba+Karštas patiekalas</td>
+                          <td>Sriuba+Karštas patiekalas</td>
 
 
 
@@ -330,7 +330,7 @@
                      </tr>
 
                      <tr>
-                          <td>   Kibinai su ivairiais įdarais</td>
+                          <td>Kibinai su įvairiais įdarais</td>
 
 
 
